# tl_platform_sdk

./: CMakeLists.txt  README.md
B91_Driver_Demo/: .cproject  .project  drivers.h  version.txt
B91_Driver_Demo/boot/B91/: SConscript  cstartup_b91_flash.S  cstartup_b91_ram.S
B91_Driver_Demo/common/: assert.h  bit.h  common.h  compiler.h  fifo.h  printf.c  printf.h  types.h
B91_Driver_Demo/common/bt_debug/: dbgport.c  dbgport.h
B91_Driver_Demo/common/compatibility_pack/: cmpt_gpio.c  cmpt_gpio.h
B91_Driver_Demo/common/usb_dbg/: log_def_stack.h  myudb.h  myudb_usb.c  myudb_usbdesc.c  myudb_usbdesc.h
B91_Driver_Demo/drivers/B91/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  core.h  dma.h  driver_b91.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  pke.c  pke.h  plic.c  plic.h  pm.h  pwm.c  pwm.h  rf.h  s7816.c  s7816.h  spi.c  spi.h  sys.c  sys.h  timer.c  timer.h  uart.c  uart.h  (+3 more)
B91_Driver_Demo/link/: flash_boot.link  flash_boot_ramcode.link  ram_boot.link
chip/B91/boot/: cstartup_flash.S  cstartup_ram.S
chip/B91/drivers/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.c  core.h  dma.h  driver.h  emi.c  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.h  plmt.c  pwm.c  pwm.h  s7816.c  s7816.h  spi.c  spi.h  stimer.c  stimer.h  timer.c  timer.h  uart.c  uart.h  (+3 more)
chip/B91/link/: flash_boot.link  flash_boot_ramcode.link  ram_boot.link
chip/B92/boot/: cstartup_flash.S  cstartup_ram.S
chip/B92/drivers/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.c  core.h  ctb.c  ctb.h  dma.h  driver.h  emi.c  emi.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.c  mspi.h  plic_sw.h  plmt.c  plmt.h  pwm.c  pwm.h  qdec.c  qdec.h  s7816.c  s7816.h  (+12 more)
chip/B92/link/: flash_boot.link  flash_boot_Os.link  flash_boot_ramcode.link  ram_boot.link
chip/TL321X/boot/: cstartup_flash.S  cstartup_ram.S
chip/TL321X/drivers/: adc.c  adc.h  analog.c  analog.h  audio.c  audio.h  cache.c  clock.c  clock.h  core.c  core.h  dma.h  driver.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  ir_learn.c  ir_learn.h  lpc.c  lpc.h  mspi.c  mspi.h  plmt.c  plmt.h  pwm.c  pwm.h  qdec.c  qdec.h  spi.c  spi.h  stimer.c  stimer.h  timer.c  timer.h  uart.c  uart.h  (+4 more)
chip/TL321X/link/: flash_boot.link  flash_boot_ramcode.link  ram_boot.link
chip/TL721X/boot/: cstartup_flash.S  cstartup_ram.S
chip/TL721X/drivers/: adc.c  adc.h  analog.c  audio.c  audio.h  clock.c  core.c  core.h  dma.c  dma.h  driver.h  flash.c  flash.h  gpio.c  gpio.h  i2c.c  ir_learn.c  ir_learn.h  lpc.c  lpc.h  mspi.c  plmt.c  pwm.c  pwm.h  qdec.c  spi.c  spi.h  stimer.c  timer.c  timer.h  uart.c  uart.h  usbhw.c  usbhw.h  watchdog.c
chip/TL721X/link/: flash_boot.link  flash_boot_ramcode.link  ram_boot.link
chip/tl322x/drivers/: adc.c  adc.h  audio.c  audio.h  can.c  can.h  dma.h  driver.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  ir_learn.c  ir_learn.h  keyscan.c  keyscan.h  keyscan_ana.c  keyscan_ana.h  lin.c  lin.h  lpc.c  lpc.h  mailbox.h  pem.c  pem.h  plic_sw.h  plmt.c  plmt.h  pwm.c  pwm.h  qdec.c  qdec.h  rram.c  rz.c  rz.h  sd_adc.c  sd_adc.h  (+14 more)
chip/tl323x/boot/: cstartup_flash.S  cstartup_ram.S
chip/tl323x/drivers/: dma.h  driver.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  lpd.c  lpd.h  plic_sw.h  plmt.c  plmt.h  pwm.c  pwm.h  sd_adc.c  sd_adc.h  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h  watchdog.c  watchdog.h
chip/tl323x/link/: flash_boot.link  flash_boot_ramcode.link  ram_boot.link
chip/tl751x/drivers/: adc.c  adc.h  aes.c  aes.h  audio.c  audio.h  dma.c  dma.h  driver.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mailbox.h  mdec.c  mdec.h  plic_sw.h  plmt.c  plmt.h  pwm.c  pwm.h  qdec.c  qdec.h  s7816.c  s7816.h  spi.c  spi.h  timer.c  timer.h  timer_bb.c  timer_bb.h  uart.c  uart.h  usb1hw.c  usb1hw.h  (+6 more)
cmake_configs/: TL_PLATFORM_SDK_321X_cmake.json  TL_PLATFORM_SDK_322X_cmake.json  TL_PLATFORM_SDK_323X_cmake.json  TL_PLATFORM_SDK_721X_cmake.json  TL_PLATFORM_SDK_751X_cmake.json  TL_PLATFORM_SDK_B91_cmake.json  TL_PLATFORM_SDK_B92_cmake.json
common/: assert.h  bit.h  compiler.h  fifo.h  sdk_version.c  sdk_version.h  types.h
common/bt_debug/: dbgport.c  dbgport.h
common/tl_usb/common/: usb_def.h  usb_log.h  usb_util.h  usbd_config.h
common/tl_usb/core/: usbd_core.c  usbd_core.h
common/tl_usb/port/: tl322x_usb.c
common/usb_dbg/: debug_vcd.h  log_def_stack.h  myudb.h  myudb_usb.c  myudb_usbdesc.c  myudb_usbdesc.h
demo/aiot_dk1/Camera_Demo/: app.c  dk1_camera_app_config.h  main.c
demo/aiot_dk1/Codec_Demo/: audio_common.c  audio_common.h  dk1_codec_app_config.h  dmic_spk.c  log.c  log.h  (+3 more)
doc/: telink_b91m_driver_sdk_Release_Note.md  telink_eagle_driver_sdk_Release_Note.md  tl_platform_sdk_Release_Note.md
doc/handbook/: Driver SDK User Guide for TLSRB91.html  Driver SDK User Guide for TLSRB92.html  Driver SDK User Guide for TLSRW92.html  Platform SDK User Guide for TL321X.html  Platform SDK User Guide for TL323X.html  Platform SDK User Guide for TL721X.html  Platform SDK User Guide for TL7518.html  Platform SDK User Guide for TL751X.html  Platform SDK User Guide for TL752X.html  Platform SDK User Guide for TL753X.html
doc/release_note/: tl_platform_sdk_Release_Note.md
project/tlsr_riscv/: README.md  TL7518.cproject.bak
tools/emi_bin_generate_tool/: GenerateBin.bat  compile.bat  show_info.bat  tool.bat
tools/release_lib/: ReadMe.txt
tools/release_sdk_tool/: ClearProject.bat  ReleaseSDK.bat  compile_v1.bat  compile_v2.bat  delay.bat  make_lib_v1.bat  make_lib_v2.bat  make_lib_v3.bat  make_lib_v4.bat  make_lib_v5.bat  read_cfg.bat  show_info.bat  tool.bat  ~cfgTmp.txt  ~log.txt
tools/secure_boot_tool/: secure_boot_tool.sh
tools/tl_check_fw_tool/: tl_check_fw.sh
tools/tl_gen_config_header_tool/: tl_gen_config_header.sh
(+801 files in other folders)
